calendarview,calendarshift fixes

--- a/src/app/pages/bookvitals/calender-shifts/calender-shifts.page.scss
+++ b/src/app/pages/bookvitals/calender-shifts/calender-shifts.page.scss
@@ -197,6 +197,7 @@ ion-content {
   height: 440px;
   padding: 14px 22px;
   margin: 0;
+  margin-bottom: 8px;
   h1 {
     font-style: normal;
     font-weight: normal;
